--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -4,15 +4,11 @@
   tasks:
     - name: Ensure Docker is installed
       apt:
-        name: docker.io
-        state: present
-        update_cache: yes
+        command: sudo docker --version
 
     - name: Ensure Docker Compose is installed
       apt:
-        name: docker-compose
-        state: present
-        update_cache: yes
+        command: sudo docker-compose --version
 
     - name: Create application directory
       file:
