deploy yaml changes

--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -42,15 +42,11 @@
   tasks:
     - name: Ensure Docker is installed
       apt:
-        name: docker.io
-        state: present
-        update_cache: yes
+        command: sudo docker --version
 
     - name: Ensure Docker Compose is installed
       apt:
-        name: docker-compose
-        state: present
-        update_cache: yes
+        command: sudo docker --version
 
     - name: Create application directory
       file:
