--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,13 +3,15 @@ pipeline {
 
     environment {
         // Replace with your actual values
-        ANSIBLE_HOST = 'user@ansible-machine-ip-or-hostname'
+        ANSIBLE_HOST = 'ubuntu@10.0.3.20 '
         PROJECT_DIR = '~/disaster_recovery_project'
         ANSIBLE_DIR = '~/disaster_recovery_project/ansible'
         SSH_KEY = credentials('rg12.pem') // Add this SSH key in Jenkins credentials
     }
 
     stages {
+
+
         stage('Deploy via Ansible') {
             steps {
                 sshagent (credentials: ['ansible_ssh_key']) {
@@ -29,5 +31,7 @@ pipeline {
                 }
             }
         }
+
+
     }
 }
