--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,36 +2,30 @@ pipeline {
     agent any
 
     environment {
-        // Replace with your actual values
-        ANSIBLE_HOST = 'ubuntu@10.0.3.20 '
+        ANSIBLE_HOST = 'ubuntu@10.0.3.20'
         PROJECT_DIR = '~/disaster_recovery_project'
         ANSIBLE_DIR = '~/disaster_recovery_project/ansible'
-        SSH_KEY = credentials('rg12.pem') // Add this SSH key in Jenkins credentials
     }
 
     stages {
-
-
         stage('Deploy via Ansible') {
             steps {
-                sshagent (credentials: ['ansible_ssh_key']) {
-                    sh '''
-                    ssh -o StrictHostKeyChecking=no \$ANSIBLE_HOST << 'ENDSSH'
-                    set -e
-                    cd \$PROJECT_DIR
+                sshagent(credentials: ['rg12.pem']) {
+                    sh """
+                        ssh -o StrictHostKeyChecking=no ${env.ANSIBLE_HOST} << 'ENDSSH'
+                        set -e
+                        cd ${env.PROJECT_DIR}
 
-                    git fetch --all
-                    git reset --hard origin/$(git rev-parse --abbrev-ref HEAD)
-                    git pull -X theirs origin $(git rev-parse --abbrev-ref HEAD)
+                        git fetch --all
+                        git reset --hard origin/\$(git rev-parse --abbrev-ref HEAD)
+                        git pull -X theirs origin \$(git rev-parse --abbrev-ref HEAD)
 
-                    cd \$ANSIBLE_DIR
-                    ansible-playbook -i inventory.ini deploy.yaml
-                    ENDSSH
-                    '''
+                        cd ${env.ANSIBLE_DIR}
+                        ansible-playbook -i inventory.ini deploy.yaml
+                        ENDSSH
+                    """
                 }
             }
         }
-
-
     }
 }
